Fix horizontal scrolling on post page on mobile

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -36,10 +36,10 @@
       background-color: rgba(33, 37, 41, 0.8);
       height: 100%;
       z-index: -1;
-      width: 200vw;
+      width: 100vw;
       display: block;
       position: absolute;
-      left: -100vw;
+      left: -1rem;
       top: 0;
     }
   }
